fixed home spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,4 +2,9 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin: 300px;
 }
+
+h1{
+  text-align: center;
+} 
